--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,8 @@ code {
 
 
 .food {
-  border: 2px solid red;
   padding: 10px; 
   display: flex;
-  margin: auto; 
-  max-width: 900px;
   min-height: 150px;
 }
 
@@ -44,3 +41,12 @@ code {
   color: white;
   align-self: center;
 }
+
+.card {
+  border: 1px solid black;
+  border-radius: 15px;
+  box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.1);
+  max-width: 900px;
+  margin: 15px auto; 
+}
+
